# lambdaconf-2016-usa

./: .gitmodules  README.md  jpt4prc.odp
ACP and PGA - Two Algebraic Theories in Computer Science/: 160218 ACP+PGA.key  160218 ACP+PGA.pptx
Easy-Peasy-Lemon-Squeezy/: README.md  bower.json  game.html  package.json  presentation.md  run
Functional Programming, Destination or Origin?/: Functional Programming-Destination or Origin?.key
Functional Refactoring/: README.md
Functional Relational Programming In UI Frameworks/: LICENSE  README.md  highlight.pack.js  index.html  slides.md
Functors, Comonads, and Digital Image Processing/: FCDIP-LambdaConf16.pptx
Getting Started with Functional Programming in F#/: .ionide.debug  a-model.fsx  b-dataAccess.fsx  c-dataAccessToDomain.fsx  d-insertData.fsx  e-simpleBusinessRules.fsx  f-introduceOption.fsx  g-useOptionMap.fsx  h-requirementsChange.fsx  i-async.fsx  paket.dependencies  readme.md
Interactive Tests and Documentation/: index.html
Introduction to Tabled Logic Programming with Picat/: README.md  coin-sum.pi  edit.pi  edit_list.pi  fac.pi  fac.pl  fib.pi  reach-number.pi  seq.pi  tpk.pi  wordsearch.pi  wordsearch.txt
Literate Programming/: README.md
MTL Versus Free: Deathmatch/: presentation.md
Manuals are for Suckers/: Manuals are for Suckers.pptx  fillLegalForm.dot  semarrow.cabal  ~$Manuals are for Suckers.pptx
Manuals are for Suckers/app/: Main.hs
Manuals are for Suckers/src/Control/: SemanticArrow.hs
Manuals are for Suckers/src/Control/SemanticArrow/: Flowchart.hs
Manuals are for Suckers/src/Data/: NestedList.hs
Programming with Algebra/: 160526 Subscript - Programming with Algebra.key  160526 Subscript - Programming with Algebra.pptx
Revealing Intent - Typed Programming in Standard Javascript/: README.md  index.html
(+80 files in other folders)
