name:                semarrow
version:             0.1.0.0
synopsis:            Semantic Arrow Example for LambdaConf 2016
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Jason Adaska
maintainer:          jadaska@gmail.com
copyright:           2016 Jason Adaska
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      , Control.SemanticArrow
                      , Data.NestedList
                      , Control.SemanticArrow.Flowchart                
  build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , mtl
                      , transformers
                      , text
                      , recursion-schemes
                      , graphviz

  default-language:    Haskell2010

executable semarrow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , semarrow
                     , bytestring
                     , text
                     , mtl
                     , transformers
                     , recursion-schemes
                     , graphviz
  default-language:    Haskell2010

test-suite semarrow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , semarrow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/semarrow
